solved-linker-error generic-main-class adding-record-error-solution

--- a/Adress book Szymon Kaldonek/Adress book Szymon Kaldonek.vcxproj
+++ b/Adress book Szymon Kaldonek/Adress book Szymon Kaldonek.vcxproj
@@ -115,7 +115,10 @@
     <ClInclude Include="Record.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AdressBook.cpp" />
+    <ClCompile Include="AdressBook.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Record.cpp" />
   </ItemGroup>
